Finished-code-with-colors-divcolors

--- a/index.html
+++ b/index.html
@@ -1,20 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" type="text/css" href="css/reset.css" />
-</head>
-<body>
+  </head>
+  <body>
+    <header>
+      <nav class="navbar-container">
+        <!--<div class="nav-bar-content-1"> no need-->
+        <a class="a-content" target="_blank" href="#">Gmails</a>
+        <a class="a-content" target="_blank" href="#">images</a>
+        <img class="application_logo a-content"
+        src="/home/kevin/Desktop/Projects/the_odin_project/google-homepage/outline_apps_black_24dp.png"
+        alt="applogo"" />
 
-    <header></header>
+        <img
+          class="profile-pic a-content"
+          src="https://i.stack.imgur.com/34AD2.jpg"
+          alt="profilePic"
+        />
+      </nav>
+    </header>
 
-    <main></main>
+    <main>
+      <img
+        class="google-image"
+        src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
+      />
 
-    <footer></footer>
-    
-</body>
+      <input class="searchbar" type="text" />
+
+      <div class="btn">
+        <button class="btn1">Recherche Google</button>
+        <button class="btn2">J'ai de la chance igga</button>
+      </div>
+
+      <p class="language-txt">
+        Google Disponible en:<a class="a-text-lang" target="_blank" href="#"
+          >English</a
+        >
+      </p>
+    </main>
+
+    <footer>
+      <div class="footer-1">
+        <a target="_blank" href="#">A propos</a>
+        <a target="_blank" href="#">Publicite</a>
+        <a target="_blank" href="#">Entrepise</a>
+        <a target="_blank" href="#">
+          Comment fonctionne la recherche Google?
+        </a>
+      </div>
+
+      <div class="footer-2">
+        <a target="_blank" href="#">Confidencialite</a>
+        <a target="_blank" href="#">Conditions</a>
+        <a target="_blank" href="#">Parametres</a>
+      </div>
+    </footer>
+  </body>
 </html>
