--- a/index.html
+++ b/index.html
@@ -9,21 +9,37 @@
     <!--html reads from top to down
     therefore you must put the reset css before your css, also always pick a good reset some others
   are not that good to be frank-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
   <body>
     <header>
       <nav class="navbar-container">
         <!--<div class="nav-bar-content-1"> no need-->
-        <a class="a-content" target="_blank" href="#">Gmails</a>
-        <a class="a-content" target="_blank" href="#">images</a>
-        <a class="image-container"
+        <a class="a-content" target="_blank" href="https://mail.google.com/"
+          >Gmails</a
+        >
+        <a class="a-content" target="_blank" href="https://www.google.com/imghp"
+          >images</a
+        >
+        <a
+          class="image-container"
+          href="https://www.youtube.com/watch?v=ILtz5nX3_fc"
+          target="_blank"
           ><img class="application_logo a-content"
-          src="https://lh3.googleusercontent.com/proxy/ZXG0J-tP2FEjutKlqkQI1s848RjHGkzF-snYbqN3ggKReSiGOMtR7vcE9u_MkfO09GwWEWpLSBcq--sQuHHJWn9nNEVmE9_iNiNNVmiNmZ-9L4i3Kwb2bqqt"
+          src="https://lh3.googleusercontent.com/proxy/GjZW3gy9ILij03hta-zjSiA_zLTXXi5rAjQ9VbTKfyEcjI082mko9o_smkPBn6gZnZIt9zFurKqA_mDB8iIdzFsFNOGOdTd0o98ztANkXhg9UeGVdqR-zNUp"
           alt="applogo"" /></a
         >
 
-        <a class="image-container"
+        <a
+          href="https://github.com/Kevessi"
+          target="_blank"
+          class="image-container"
           ><img
             class="profile-pic a-content"
             src="https://i.stack.imgur.com/34AD2.jpg"
@@ -38,11 +54,27 @@
         src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
       />
 
-      <input class="searchbar" type="text" />
+      <div class="searchbar-wrapp">
+        <input class="searchbar" type="text" />
+
+        <a
+          href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+          id="searchbar-audio-image"
+          target="_blank"
+          ><img
+            id="audio-image"
+            src="https://i.pinimg.com/originals/ea/5f/5b/ea5f5bd3b4110f2afb958049b4096d3a.png"
+        /></a>
+
+        <img
+          class="searchbar-search-image"
+          src="https://www.freeiconspng.com/thumbs/search-icon-png/search-icon-png-2.png"
+        />
+      </div>
 
       <div class="btn">
         <button class="btn1">Recherche Google</button>
-        <button class="btn2">J'ai de la chance igga</button>
+        <button class="btn2">J'ai de la chance</button>
       </div>
 
       <p class="language-txt">
